[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yoktez-mcp"
version = "0.1.0"
description = "MCP Server for Turkish Thesis Database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.5.1",
    "ftfy>=6.3.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "markitdown[pdf]>=0.1.1",
    "playwright>=1.52.0",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
]

[project.scripts]
yoktez-mcp = "yoktez_mcp_server:main"

[tool.setuptools]
py-modules = ["yoktez_mcp_server", "client", "models"]