[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yoktez-mcp"
version = "0.1.0"
description = "MCP Server for Turkish Thesis Database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.14.1",
    "ftfy>=6.3.1",
    "httpx[http2]>=0.28.1",
    "lxml>=5.4.0",
    "markitdown[pdf]>=0.1.1",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
]

[project.scripts]
yoktez-mcp = "yoktez_mcp_server:main"

[tool.setuptools]
py-modules = ["yoktez_mcp_server", "client", "models", "cache"]
